<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".view.EditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:gravity="center"
        android:background="@drawable/crd_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_title"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="@drawable/bordered_edit_text"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_title"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_description"
            android:inputType="text"
            android:lines="2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="@drawable/bordered_edit_text"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_description"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edtURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_image_url"
            android:inputType="textUri"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="@drawable/bordered_edit_text"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_image"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize"
            android:backgroundTint="@color/blue"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_note_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>